mizar/obj/tests/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: netpod1
  labels:
    podkey: netpodkey1
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                  - kind-worker
  restartPolicy: OnFailure
  terminationGracePeriodSeconds: 2
  containers:
    - name: netctr
      image: mizarnet/testpod
      command: ["tail", "-f", "/dev/null"]
      ports:
        - containerPort: 4444
          protocol: UDP
        - containerPort: 8888
          protocol: UDP
        - containerPort: 4444
          protocol: TCP
        - containerPort: 8888
          protocol: TCP
---
apiVersion: v1
kind: Pod
metadata:
  name: netpod2
spec:
  affinity:
    podAntiAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        - labelSelector:
            matchExpressions:
              - key: podkey
                operator: In
                values:
                  - netpodkey1
          topologyKey: kubernetes.io/hostname
  restartPolicy: OnFailure
  terminationGracePeriodSeconds: 2
  containers:
    - name: netctr
      image: mizarnet/testpod
      command: ["tail", "-f", "/dev/null"]
      ports:
        - containerPort: 4444
          protocol: UDP
        - containerPort: 8888
          protocol: UDP
        - containerPort: 4444
          protocol: TCP
        - containerPort: 8888
          protocol: TCP
