mizar/obj/tests/test_arktos_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    arktos.futurewei.com/network: vpc0
  annotations:
    arktos.futurewei.com/nic: {"name": "eth0", "ip": "10.10.1.12", "subnet": "net0"}
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
      - containerPort: 443
