mizar/obj/tests/test_namespace_2.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: namespace2
  labels:
    app: nsnginx
    environment: nsprod
