mizar/obj/tests/test_namespace_3.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: namespace3
  labels:
     app: nsnginx
     environment: nsstaging
