mizar/obj/tests/test_network.yaml
apiVersion: arktos.futurewei.com/v1
kind: Network
metadata:
  name: vpc-1
spec:
  type: mizar
  vpcID: vpc0
  service:
    ipam: External
