mizar/obj/tests/test_pod_arktos_3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: arktospoddefault3
  namespace: namespace3
  labels:
    app: nginx
    environment: staging
  annotations:
    arktos.futurewei.com/nic: "[{\"name\": \"eth0\"}]"
spec:
  containers:
  - name: arktospoddefault3
    image: localhost:5000/testpod
    ports:
      - containerPort: 443
