mizar/obj/tests/test_seperate_nodes_pod.yaml
# SPDX-License-Identifier: MIT
# Copyright (c) 2022 The Authors.

# Authors: The Mizar Team

# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:The above copyright
# notice and this permission notice shall be included in all copies or
# substantial portions of the Software.THE SOFTWARE IS PROVIDED "AS IS",
# WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED
# TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
# NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE
# FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
# TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR
# THE USE OR OTHER DEALINGS IN THE SOFTWARE.

apiVersion: v1
kind: Pod
metadata:
  name: testpod1
  labels:
    podkey: testpodkey1
spec:
  restartPolicy: OnFailure
  terminationGracePeriodSeconds: 2
  containers:
    - name: testpod3
      image: phudtran/testpod
---
apiVersion: v1
kind: Pod
metadata:
  name: testpod2
spec:
  affinity:
    podAntiAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        - labelSelector:
            matchExpressions:
              - key: podkey
                operator: In
                values:
                  - testpodkey1
          topologyKey: kubernetes.io/hostname
  restartPolicy: OnFailure
  terminationGracePeriodSeconds: 2
  containers:
    - name: testpod2
      image: phudtran/testpod
---
apiVersion: v1
kind: Pod
metadata:
  name: testpod3
spec:
  affinity:
    podAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        - labelSelector:
            matchExpressions:
              - key: podkey
                operator: In
                values:
                  - testpodkey1
          topologyKey: kubernetes.io/hostname
  restartPolicy: OnFailure
  terminationGracePeriodSeconds: 2
  containers:
    - name: testpod3
      image: phudtran/testpod
