mizar/obj/tests/test_vpc_with_no_vni.yaml
apiVersion: mizar.com/v1
kind: Vpc
metadata:
  name: vpc12
spec:
  ip: "192.168.12.0"
  prefix: "24"
  dividers: 1
  status: "Init"
